2007-05-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audiofx/audioamplify.c: (gst_audio_amplify_transform_ip):
	* gst/audiofx/audiodynamic.c: (gst_audio_dynamic_transform_ip):
	* gst/audiofx/audioinvert.c: (gst_audio_invert_transform_ip):
	Sync the GObject properties before each processing step to properly
	work with the controller.

2007-05-04  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_send_keep_alive),
	(gst_rtspsrc_loop_udp), (gst_rtspsrc_try_send), (gst_rtspsrc_send),
	(gst_rtspsrc_setup_streams), (gst_rtspsrc_open),
	(gst_rtspsrc_close), (gst_rtspsrc_play), (gst_rtspsrc_pause),
	(gst_rtspsrc_change_state):
	Let more error state trickle down so that we can catch more error
	cases.
	Handle keep-alive a little smarter by selecting a method the server
	actually supports.
	Fix a race in UDP streaming shutdown.

2007-05-04  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_send_keep_alive):
	Ignore errors when trying to use the keep-alive messages.

2007-05-04  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_handle_src_event),
	(gst_rtspsrc_handle_src_query), (gst_rtspsrc_sink_chain),
	(gst_rtspsrc_stream_configure_manager),
	(gst_rtspsrc_stream_free_udp), (gst_rtspsrc_stream_configure_tcp),
	(gst_rtspsrc_stream_configure_mcast),
	(gst_rtspsrc_stream_configure_udp),
	(gst_rtspsrc_stream_configure_udp_sink),
	(gst_rtspsrc_stream_configure_transport):
	Send RTCP messages back to the server over the TCP connection.

	* gst/rtsp/rtspconnection.c: (rtsp_connection_write),
	(rtsp_connection_send), (rtsp_connection_read), (read_body),
	(rtsp_connection_receive):
	* gst/rtsp/rtspconnection.h:
	Factor out and expose lowlevel _write and _read methods.
	Implement sending data messages to the server.

2007-05-03  Wim Taymans  <wim@fluendo.com>

	* gst/multipart/multipartmux.c: (gst_multipart_mux_queue_pads),
	(gst_multipart_mux_collected):
	Fix timestamps on outgoing buffers.
